made navbar responsive and correctied agents, agent page

--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,6 @@
   text-align: center;
   line-height: 16px;
   position: relative;
-  z-index: 0;
   text-overflow: ellipsis;
   height: 32px;
   border-radius: 12px;
@@ -315,7 +314,6 @@ nav {
 #hero::after {
   content: '';
   position: absolute;
-  z-index: 100;
   left: 0;
   bottom: 0;
   height: 3vh;
@@ -334,4 +332,23 @@ nav {
     height: 50px;
     width: 50px;
   }
+}
+
+select {
+  width: max-content;
+  min-width: 15ch;
+  max-width: 30ch;
+  border: 1px solid var(--select-border);
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1.25rem;
+  cursor: pointer;
+  line-height: 1.1;
+  background-color: #fff;
+  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+  font-size: 1.5rem;
+}
+
+select>option{
+  font-size: 1.5rem;
 }
