--- a/src/components/pages/cart/cart.css
+++ b/src/components/pages/cart/cart.css
@@ -7,18 +7,18 @@
 
 .cartItem {
   width: 700px;
-  height: 250px;
+  height: 260px;
   display: flex;
 
   align-items: center;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  border-radius: 25px;
+  border-radius: 8px;
   margin: 30px;
 }
 
 .cartItem img {
-  margin: 20px;
-  width: 200px;
+  margin: 30px;
+  width: 400px;
 }
 
 .cartItem .description {
@@ -45,4 +45,8 @@
 
 .blankCart {
   height: 400px;
+}
+
+.subtotal {
+  font-size: xx-large;
 }
