--- a/src/components/pages/shop/shop.css
+++ b/src/components/pages/shop/shop.css
@@ -102,3 +102,73 @@
   color: green; /* Color for the discounted price */
   font-weight: bold; /* Make the discounted price bold */
 }
+
+
+/* ///////////// */
+
+.shop {
+  text-align: center;
+}
+
+.price-filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 15px;
+}
+
+.slider-container label {
+  font-size: 16px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.range-slider {
+  width: 100%;
+  max-width: 100%;
+}
+
+.price-filter button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.range-slider .range-slider__range {
+  position: absolute;
+  z-index: 1;
+  transform: translate(0, -50%);
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+}
+
+.range-slider .range-slider__thumb {
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  width: 24px;
+  height: 24px;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: #000000;
+}
+
+
+@media (min-width: 768px) {
+  .slider-container {
+    max-width: 400px;
+  }
+}
